Fix: the content was clickable on small screens

--- a/www/scss/common.scss
+++ b/www/scss/common.scss
@@ -20,8 +20,7 @@ body {
     margin: 0;
     font-family: Roboto, Arial;
 
-    > div,
-    > div > div {
+    > div {
         height: 100%;
     }
 }
